# api-launchpad

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  console.py  debug.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  readme.md  setup.cfg
.docker/: Dockerfile
.github/workflows/: build-dev.yml  build-prod.yml  code-style.yml
.helm/: install_vault.sh  prepare_values.sh
.helm/launchpad/: values.yaml.tpl
.helm/launchpad/templates/: _helpers.tpl  (+8 more)
app/: __init__.py  abi.py  admin.py  base.py  chains.py  consts.py  dependencies.py  env.py  limiter.py  models.py  redis.py  schema.py  selectors.py  tasks.py  tg.py  types.py  utils.py
app/common/: __init__.py
app/crud/: __init__.py  history_blp_staking.py  history_staking.py  launchpad_events.py  launchpad_project.py  onramp.py  points.py  profiles.py  project_whitelist.py  refcodes.py  supported_tokens.py  transactions.py
app/router/: __init__.py
app/services/: __init__.py  crypto.py  ido.py  lock.py  prices.py  storage.py  web3_nodes.py  yield_apr.py
app/tg_notifications/: jobs.py
migrations/: env.py
migrations/versions/: 20240327_1034-a00f5d79c0dd.py  20240327_1043-6e968245c0ea.py  20240327_1738-4d4d74d067de.py  20240327_1909-99fb00e6e5c0.py  20240329_1439-3009b9a67a61.py  20240329_1441-73834af06c4c.py  20240329_1549-c4318467f675.py  20240330_1517-210fb733bd2f.py  20240401_1628-1d0fe7ddf14b.py  20240402_0246-5e93d1164589.py  20240402_1204-a03de7029125.py  20240402_1239-1308fc4fe056.py  20240402_1241-72e3bbb4def9.py  20240402_1242-08723b294879.py  20240402_1648-0645a13bbab5.py  20240403_1442-935f35b1107e.py  20240403_1452-17aab55a6772.py  20240404_1153-ba560db8cb95.py  20240404_1740-a45d979f71d7.py  20240405_0731-509b65d48099.py  20240411_1452-f68f01901268.py  20240411_1820-521d7a215689.py  20240411_1937-14867a15741b.py  20240411_1943-1389be6865b3.py  20240412_2207-e7fcc5dc2c16.py  20240415_1452-f68f01901268.py  20240422_1308-f4391989d839-add_token_address_for_project.py  20240430_1051-fc9df0701eb9-history_stake.py  20240501_1504-eb848d4fd623-txn_hash_and_block_number_for_stake_.py  20240501_1828-fd4cc4ad60b2-contract_project_id_for_project.py  20240502_1147-5a83883bba79-approve_for_reg_is_required_flag.py  20240502_1434-62d67d8d01c9-change_history_stake_amount_type.py  20240506_1720-9a3dff952c6f-add_badges.py  20240507_1051-6cfeb4e97938-add_badges.py  (+32 more)
onramp/: abi.py  jobs.py  router.py  schema.py  services.py
(+62 files in other folders)
