[tool.poetry]
name = "blastup-launchpad"
version = "0.1.0"
description = ""
authors = ["Qringie <alex@blastup.io>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.1"}
python-dotenv = "^1.0.1"
sentry-sdk = "^1.42.0"
logtail-python = "^0.2.10"
sqlalchemy = "^2.0.28"
redis = "^5.0.3"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
celery = {extras = ["redis"], version = "^5.3.6"}
web3 = "^6.15.1"
greenlet = "^3.0.2"
shortuuid = "^1.0.13"
PyJWT = "^2.8.0"
itsdangerous = "^2.1.2"
sqladmin = "^0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
