[tool.poetry]
name = "blastup-launchpad"
version = "0.1.0"
description = ""
authors = ["Qringie <alex@blastup.io>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.1"}
python-dotenv = "^1.0.1"
sentry-sdk = "^1.42.0"
logtail-python = "^0.2.10"
sqlalchemy = "^2.0.28"
redis = "^5.0.3"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
celery = {extras = ["redis"], version = "^5.3.6"}
web3 = "^6.15.1"
greenlet = "^3.0.2"
shortuuid = "^1.0.13"
PyJWT = "^2.8.0"
itsdangerous = "^2.1.2"
sqladmin = "^0.16.1"
numpy = "^1.26.4"
fastapi-pagination = "^0.12.24"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pre-commit = "2.18.1"
black = "24.2.0"
isort = "5.10.0"
flake8 = "7.0.0"
flake8-bugbear = "22.7.1"
flake8-comprehensions = "3.10.0"
flake8-colors = "0.1.9"
flake8-simplify = "0.19.3"
flake8-builtins = "1.5.3"
flake8-print = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100


[tool.black]
line-length = 100
target-version = ['py311']
quiet = true
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
    | migrations
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
